# Optimization

./: .gitignore  CHANGELOG.md  ISSUES.md  __init__.py  constrained.py  global_opt.py  learning_rate.py  line_search.py  multi_objective.py  optimizers.py  proximal.py  pyproject.toml  second_order.py  stochastic.py  utilities.py
examples/: __init__.py  optimization_tutorial.py
tests/: __init__.py  test_constrained.py  test_global.py  test_learning_rate_new.py  test_line_search.py  test_multi_objective.py  test_optimization.py  test_optimizers_new.py  test_proximal.py  test_second_order.py  test_stochastic.py  test_utilities.py
